Updated index.html with a new layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brent Postlethweight - Portfolio</title>
-</head>
+  <link rel="stylesheet" href="styles.css"> </head>
 <body>
-  <h1>Welcome to my Portfolio!</h1>
-  <p>Click the link below to access my resume/portfolio PDF.</p>
-  <a href="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx/view?usp=sharing">View Portfolio (PDF)</a>
+  <header>
+    <h1>Brent Postlethweight</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Results-driven Marketing Operations and Analytics professional with 10+ years of experience driving growth and efficiency in non-profit and educational environments. Uniquely able to combine analytical expertise with multimedia production experience to create visually compelling reports, dashboards, and presentations. Experienced in aligning operations with organizational goals, optimizing systems to support growth, and improving performance. Adept at leading technical, cross-functional projects. Passionate about applying business acumen and analytical skills to create positive social impact.</p>
+      <img src="your-profile-pic.jpg" alt="Your Profile Picture">
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <h3>Project 1</h3>
+          <p>Description of Project 1</p>
+          <a href="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx">View Project</a>
+        </li>
+        </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>How to contact you (email, social media, etc.)</p>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2024 Brent Postlethweight
+  </footer>
 </body>
 </html>
