Added CSS file and updated index content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>How to contact you (email, social media, etc.)</p>
+      <p>Connect with me:</p>
+        <ul>
+          <li>LinkedIn: <a href="https://www.linkedin.com/in/brentpostlethweight">in/brentpostlethweight</a></li>
+          <li>Email <a href="mailto:brentpostle@gmail.com">brentpostle@gmail.com</a></li>
+        </ul>
     </section>
   </main>
 
