Added profile picture and adjusted hyperlinks to open in new tab

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brent Postlethweight - Portfolio</title>
-  <link rel="stylesheet" href="styles.css"> </head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
   <header>
     <h1>Brent Postlethweight</h1>
@@ -21,7 +22,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>Results-driven Marketing Operations and Analytics professional with 10+ years of experience driving growth and efficiency in non-profit and educational environments. Uniquely able to combine analytical expertise with multimedia production experience to create visually compelling reports, dashboards, and presentations. Experienced in aligning operations with organizational goals, optimizing systems to support growth, and improving performance. Adept at leading technical, cross-functional projects. Passionate about applying business acumen and analytical skills to create positive social impact.</p>
-      <img src="your-profile-pic.jpg" alt="Your Profile Picture">
+      <img src="images/profile.jpg" alt="Profile Picture">
     </section>
 
     <section id="projects">
@@ -29,19 +30,18 @@
       <ul>
         <li>
           <h3>Project 1</h3>
-          <p>Description of Project 1</p>
-          <a href="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx">View Project</a>
+          <p>Project Charter for a Data Hygiene Dashboard</p>
+          <a href="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx" target="_blank">View Document</a>
         </li>
-        </ul>
+      </ul>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Connect with me:</p>
-        <ul>
-          <li>LinkedIn: <a href="https://www.linkedin.com/in/brentpostlethweight">in/brentpostlethweight</a></li>
-          <li>Email <a href="mailto:brentpostle@gmail.com">brentpostle@gmail.com</a></li>
-        </ul>
+      <ul>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/brentpostlethweight" target="_blank">in/brentpostlethweight</a></li>
+        <li>Email: <a href="mailto:brentpostle@gmail.com" target="_blank">brentpostle@gmail.com</a></li>
+      </ul>
     </section>
   </main>
 
