Added iframe to project 1

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <h3>Project 1</h3>
           <p>Project Charter for a Data Hygiene Dashboard</p>
           <a href="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx" target="_blank">View Document</a>
+          <iframe src="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx/preview" width="640" height="480" allow="autoplay"></iframe>
         </li>
       </ul>
     </section>
