Added iframe to project 2

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
       <h2>Projects</h2>
       <ul>
         <li>
-          <h3>Project 1</h3>
-          <p>Project Charter for a Data Hygiene Dashboard</p>
-          <a href="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx" target="_blank">View Document</a>
+          <h3>Project Charter</h3>
+          <p>Project requirements documentation I created for a data hygiene operations dashboard that I would own</p>
           <iframe src="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx/preview" width="640" height="480" allow="autoplay"></iframe>
+          <h3>Process Map</h3>
+          <p>Phased approach that I designed to automate the student admissions rounds in Salesforce based on available capacity</p>
+          <iframe src="https://drive.google.com/file/d/19Fo65oxlfBpUKzor9LeUbAolB1uuuDpO/preview" width="640" height="480" allow="autoplay"></iframe>
         </li>
       </ul>
     </section>
