Added iframe to project 3

--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
     <section id="projects">
       <h2>Projects</h2>
       <ul>
-        <li>
           <h3>Project Charter</h3>
           <p>Project requirements documentation I created for a data hygiene operations dashboard that I would own</p>
           <iframe src="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx/preview" width="640" height="480" allow="autoplay"></iframe>
           <h3>Process Map</h3>
           <p>Phased approach that I designed to automate the student admissions rounds in Salesforce based on available capacity</p>
           <iframe src="https://drive.google.com/file/d/19Fo65oxlfBpUKzor9LeUbAolB1uuuDpO/preview" width="640" height="480" allow="autoplay"></iframe>
-        </li>
+          <h3>Salesforce Dashboard</h3>
+          <p>Dashboard that served as the single source of truth for relevant metrics for the annual admissions cycle (blurred to protect sensitive data)</p>
+          <iframe src="https://drive.google.com/file/d/1i11O-qcGUF1BxdyKtR7m-Yoyo18H6ZfU/preview" width="640" height="480" allow="autoplay"></iframe>
       </ul>
     </section>
 
