--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <iframe src="https://drive.google.com/file/d/19Fo65oxlfBpUKzor9LeUbAolB1uuuDpO/preview" width="640" height="480" allow="autoplay"></iframe>
           <h3>Salesforce Dashboard</h3>
           <p>Dashboard that served as the single source of truth for relevant metrics for the annual admissions cycle (blurred to protect sensitive data)</p>
-          <iframe src="https://drive.google.com/file/d/1i11O-qcGUF1BxdyKtR7m-Yoyo18H6ZfU/preview" width="640" height="480" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1i11O-qcGUF1BxdyKtR7m-Yoyo18H6ZfU/preview" width="100%" height="480px" allow="autoplay" style="width: 100%; height: 480px;"></iframe>
       </ul>
     </section>
 
