Adjusted styles and index layouts

--- a/index.html
+++ b/index.html
@@ -4,21 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brent Postlethweight - Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="styles copy.css">
 </head>
-<body>
-  <header>
-    <h1>Brent Postlethweight</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<body> 
+  <!-- NAVBAR -->
+  <nav>
+    <div class="left">
+      <a href="/">Brent Postlethweight</a>
+    </div>
+      
+    <div class="right">
+      <a href="https://github.com/bepostle" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-github"></i>
+        <span>GitHub</span>
+      </a>
+
+      <a href="https://www.linkedin.com/in/brentpostlethweight/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-linkedin"></i>
+        <span>LinkedIn</span>
+      </a>
+
+      <a href="mailto:brentpostle@gmail.com">
+        <i class="fa-solid fa-envelope"></i>
+        <span>Email</span>
+      </a>
+
+    </div>  
+  </nav>
 
   <main>
+    <!-- SECTION 1: HERO -->
+    <section></section>
+
+    <!-- SECTION 2: SKILLS -->
+    <section id="skills"></section>
+
+    <!-- SECTION 3: TESTIMONY -->
+    <section id="testimony"></section>
+
+    <!-- SECTION 4: CONTACT -->
+    <section id="contact"></section>
+
     <section id="about">
       <h2>About Me</h2>
       <p>Results-driven Marketing Operations and Analytics professional with 10+ years of experience driving growth and efficiency in non-profit and educational environments. Uniquely able to combine analytical expertise with multimedia production experience to create visually compelling reports, dashboards, and presentations. Experienced in aligning operations with organizational goals, optimizing systems to support growth, and improving performance. Adept at leading technical, cross-functional projects. Passionate about applying business acumen and analytical skills to create positive social impact.</p>
