Adjusted styles and index layouts

--- a/index.html
+++ b/index.html
@@ -41,22 +41,39 @@
 
   <main>
     <!-- SECTION 1: HERO -->
-    <section></section>
+    <section class="hero-section">
+      <div class="text">
+        <h2>Hi, I'm Brent 👋</h2>
+        <p>Results-driven Marketing Operations and Analytics professional with 10+ years of experience driving growth and efficiency in non-profit and educational environments. Uniquely able to combine analytical expertise with multimedia production experience to create visually compelling reports, dashboards, and presentations. Experienced in aligning operations with organizational goals, optimizing systems to support growth, and improving performance. Adept at leading technical, cross-functional projects. Passionate about applying business acumen and analytical skills to create positive social impact.</p>
 
-    <!-- SECTION 2: SKILLS -->
-    <section id="skills"></section>
+      <div class="links">
+        <a href="#work-products">
+          <i class="fa-solid fa-briefcase"></i>
+          <span>Work Products</span>
+        </a>
+
+        <a href="#testimony">
+          <i class="fa-solid fa-pen"></i>
+          <span>Testimony</span>
+        </a>
+
+        <a href="#contact">
+          <i class="fa-solid fa-envelope"></i>
+          <span>Contact</span>
+        </a>
+      </div>
+
+      <div class="headshot"></div>
+    </section>
+
+    <!-- SECTION 2: WORK PRODUCTS -->
+    <section id="work-products"></section>
 
     <!-- SECTION 3: TESTIMONY -->
     <section id="testimony"></section>
 
     <!-- SECTION 4: CONTACT -->
     <section id="contact"></section>
-
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Results-driven Marketing Operations and Analytics professional with 10+ years of experience driving growth and efficiency in non-profit and educational environments. Uniquely able to combine analytical expertise with multimedia production experience to create visually compelling reports, dashboards, and presentations. Experienced in aligning operations with organizational goals, optimizing systems to support growth, and improving performance. Adept at leading technical, cross-functional projects. Passionate about applying business acumen and analytical skills to create positive social impact.</p>
-      <img src="images/profile.jpg" alt="Profile Picture">
-    </section>
 
     <section id="projects">
       <h2>Projects</h2>
@@ -69,7 +86,7 @@
           <iframe src="https://drive.google.com/file/d/19Fo65oxlfBpUKzor9LeUbAolB1uuuDpO/preview" width="640" height="480" allow="autoplay"></iframe>
           <h3>Salesforce Dashboard</h3>
           <p>Dashboard that served as the single source of truth for relevant metrics for the annual admissions cycle (blurred to protect sensitive data)</p>
-          <iframe src="https://drive.google.com/file/d/1i11O-qcGUF1BxdyKtR7m-Yoyo18H6ZfU/preview" width="100%" height="480px" allow="autoplay" style="width: 100%; height: 480px;"></iframe>
+          <iframe src="https://drive.google.com/file/d/1i11O-qcGUF1BxdyKtR7m-Yoyo18H6ZfU/preview" width="640" height="480px" allow="autoplay"></iframe>
       </ul>
     </section>
 
