Adjusted styles and index layouts

--- a/index.html
+++ b/index.html
@@ -46,24 +46,27 @@
         <h2>Hi, I'm Brent 👋</h2>
         <p>Results-driven Marketing Operations and Analytics professional with 10+ years of experience driving growth and efficiency in non-profit and educational environments. Uniquely able to combine analytical expertise with multimedia production experience to create visually compelling reports, dashboards, and presentations. Experienced in aligning operations with organizational goals, optimizing systems to support growth, and improving performance. Adept at leading technical, cross-functional projects. Passionate about applying business acumen and analytical skills to create positive social impact.</p>
 
-      <div class="links">
-        <a href="#work-products">
-          <i class="fa-solid fa-briefcase"></i>
-          <span>Work Products</span>
-        </a>
+        <div class="links">
+          <a href="#work-products">
+            <i class="fa-solid fa-briefcase"></i>
+            <span>Work Products</span>
+          </a>
 
-        <a href="#testimony">
-          <i class="fa-solid fa-pen"></i>
-          <span>Testimony</span>
-        </a>
+          <a href="#testimony">
+            <i class="fa-solid fa-pen"></i>
+            <span>Testimony</span>
+          </a>
 
-        <a href="#contact">
-          <i class="fa-solid fa-envelope"></i>
-          <span>Contact</span>
-        </a>
+          <a href="#contact">
+            <i class="fa-solid fa-envelope"></i>
+            <span>Contact</span>
+          </a>
+        </div>
       </div>
 
-      <div class="headshot"></div>
+      <div class="headshot">
+        <img src="images/profile.webp" alt="Brent Postlethweight headshot">
+      </div>
     </section>
 
     <!-- SECTION 2: WORK PRODUCTS -->
