Updated index, styles, and readme file

--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
     <section class="hero-section">
       <div class="text">
         <h2>Hi, I'm Brent 👋</h2>
-        <p>Results-driven Marketing Operations and Analytics professional with 10+ years of experience driving growth and efficiency in non-profit and educational environments. Uniquely able to combine analytical expertise with multimedia production experience to create visually compelling reports, dashboards, and presentations. Experienced in aligning operations with organizational goals, optimizing systems to support growth, and improving performance. Adept at leading technical, cross-functional projects. Passionate about applying business acumen and analytical skills to create positive social impact.</p>
+        <p>I've honed my skills in aligning tech, data, and processes to drive growth. What sets me apart is my unique blend of leadership expertise and hands-on experience. I'm not just a strategist - I roll up my sleeves, build from scratch, and implement solutions for real-world impact.</p>
+        <p><br>
+        Whether it's streamlining CRM, automating workflows, or designing data dashboards, I thrive on the tactical and strategic. I'm a collaborative team player who can see the big picture and translate complex data into actionable insights. I'm driven by results, and I'm passionate about using my skills to create positive change.</p><br>
+        <p>In past roles, I've led major tech implementations, cross-functional projects, and continuous process improvements. I'm excited to bring this blend of expertise and leadership to your team. I can hit the ground running, getting the right tools and systems in place to support your goals. Let's talk about how I can make an immediate impact!</p>
 
         <div class="links">
-          <a href="#work-products">
+          <a href="#work-product">
             <i class="fa-solid fa-briefcase"></i>
-            <span>Work Products</span>
+            <span>Work Product</span>
           </a>
 
           <a href="#testimony">
@@ -69,33 +72,93 @@
       </div>
     </section>
 
-    <!-- SECTION 2: WORK PRODUCTS -->
-    <section id="work-products"></section>
+    <!-- SECTION 2: WORK PRODUCT -->
+    <section id="work-product" class="work-product-section">
+      <h2>Work Product</h2>
+      <div class="text">
+        Lorem ipsum odor amet, consectetuer adipiscing elit. Arcu ultrices himenaeos potenti, sem feugiat conubia nibh. Cursus inceptos non aliquet porttitor torquent tortor nunc purus. In class libero habitasse cras fermentum penatibus.
+      </div>
+      <div class="cells">
 
-    <!-- SECTION 3: TESTIMONY -->
-    <section id="testimony"></section>
+        <div class="cell">
+          <i class="fa-solid fa-chart-simple"></i>
+          <span>Dashboards</span>
+        </div>
 
-    <!-- SECTION 4: CONTACT -->
-    <section id="contact"></section>
+        <div class="cell">
+          <i class="fa-brands fa-salesforce"></i>
+          <span>Salesforce + CRM</span>
+        </div>
 
-    <section id="projects">
-      <h2>Projects</h2>
+        <div class="cell">
+          <i class="fa-solid fa-list-check"></i>
+          <span>Project Management</span>
+        </div>
+
+        <div class="cell">
+          <i class="fa-solid fa-diagram-project"></i>
+          <span>Process Improvement</span>
+        </div>
+
+        <div class="cell">
+          <i class="fa-solid fa-code"></i>
+          <span>Code</span>
+        </div>
+
+      </div>
+
       <ul>
-          <h3>Project Charter</h3>
-          <p>Project requirements documentation I created for a data hygiene operations dashboard that I would own</p>
-          <iframe src="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx/preview" width="640" height="480" allow="autoplay"></iframe>
-          <h3>Process Map</h3>
-          <p>Phased approach that I designed to automate the student admissions rounds in Salesforce based on available capacity</p>
-          <iframe src="https://drive.google.com/file/d/19Fo65oxlfBpUKzor9LeUbAolB1uuuDpO/preview" width="640" height="480" allow="autoplay"></iframe>
+          <br>
+          <h3>Looker Dashboard</h3>
+          <p>Partnered with the lead Looker developer to build out an exec-facing acquisition dashboard. As the domain expert, I provided the SQL queries and graph requirements (blurred to protect sensitive data).</p>
+          <br>
+          <iframe src="https://drive.google.com/file/d/1Kv1KyXurOwW_9FzdDUWlmjAg4hRwnrLT/preview" width="640" height="480" allow="autoplay"></iframe>
+          <br>    
           <h3>Salesforce Dashboard</h3>
-          <p>Dashboard that served as the single source of truth for relevant metrics for the annual admissions cycle (blurred to protect sensitive data)</p>
+          <p>I built a dashboard entirely within Salesforce as the single source of truth for relevant metrics related to the annual admissions cycle (blurred to protect sensitive data)</p>
+          <br>
           <iframe src="https://drive.google.com/file/d/1i11O-qcGUF1BxdyKtR7m-Yoyo18H6ZfU/preview" width="640" height="480px" allow="autoplay"></iframe>
+          <br>
+          <h3>Project Charter</h3>
+          <p>Project requirements documentation I created for a data hygiene operations dashboard that I ultimately owned.</p>
+          <br>
+          <iframe src="https://drive.google.com/file/d/1DN64UVyxr_ZJljlFilAXJmdhbW7z2CTx/preview" width="640" height="480" allow="autoplay"></iframe>
+          <br>
+          <h3>Process Map</h3>
+          <p>Phased approach that I designed to automate the student admissions rounds in Salesforce based on available capacity.</p>
+          <br>
+          <iframe src="https://drive.google.com/file/d/19Fo65oxlfBpUKzor9LeUbAolB1uuuDpO/preview" width="640" height="480" allow="autoplay"></iframe>
+          
       </ul>
+
     </section>
 
-    <section id="contact">
+
+    <!-- SECTION 3: TESTIMONY
+    <section id="testimony" class="testimony-section">
+      <h2>Testimony</h2>
+
+      <div class="group">
+        <div class="person-details">
+          <img src="" alt="">
+          <p>John Doe</p>
+          <p>Title</p>
+        </div>
+
+          <div class="text">"Lorem ipsum odor amet, consectetuer adipiscing elit. Arcu ultrices himenaeos potenti, sem feugiat conubia nibh. Cursus inceptos non aliquet porttitor torquent tortor nunc purus. In class libero habitasse cras fermentum penatibus."</div>
+      </div>
+    </section>
+  -->
+
+    <!-- SECTION 4: CONTACT -->
+    <section id="contact" class="contact-section">
       <h2>Contact</h2>
+
+      <div class="group">
+        <div class="text"></div>
+      </div>
       <ul>
+        <li>GitHub: <a href="https://www.github.com/bepostle" target="_blank">bepostle</a></li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/brentpostlethweight" target="_blank">in/brentpostlethweight</a></li>
         <li>Email: <a href="mailto:brentpostle@gmail.com" target="_blank">brentpostle@gmail.com</a></li>
       </ul>
