Updated index with the Looker Studio dashboard

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
           <p>I built a dashboard entirely within Salesforce as the single source of truth for relevant metrics related to the annual admissions cycle (blurred to protect sensitive data)</p>
           <br>
           <iframe src="https://drive.google.com/file/d/1i11O-qcGUF1BxdyKtR7m-Yoyo18H6ZfU/preview" width="640" height="480px" allow="autoplay"></iframe>
+          <br>    
+          <h3>Looker Studio Dashboard</h3>
+          <p>A very simple dashboard to visualize progress in my resistance training routine</p>
+          <br>
+          <iframe width="600" height="1617" src="https://lookerstudio.google.com/embed/reporting/07a7d778-206f-4387-938e-e67440592199/page/2gbAE" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
           <br>
           <h3>Project Charter</h3>
           <p>Project requirements documentation I created for a data hygiene operations dashboard that I ultimately owned.</p>
